--- a/index.html
+++ b/index.html
@@ -6,10 +6,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@1,700&family=Poppins&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
+    <div class="container">
+        <img src="mypic/ranaplaza1.jpg" alt="" style="width:100%;">
+        <div class="centered">
+            <h1>Let’s Help Those Who Are
+                More In Need</h1>
+            <p id="lekha1">Its time to show your kindness and marcy to the people who lost their everything</p>
+            <a class="link" target="_blank" href="https://www.bkash.com/">Donate Now</a>
+        </div>
 
+    </div>
+
+    <br>
+    <div class="donate">
+        <h2> Donate Today</h2>
+        <p>
+            To help in the aftermath of the 4 july Old-Dhaka slum , see our potfolio on helping Camp Fire and Woolsley
+            fire
+            victims.
+        </p>
+
+    </div>
+    <section class="wholedonation">
+        <div class="amount">
+            <div class="tk">
+                <h3>100tk</h3>
+            </div>
+            <div class="tk tk2">
+                <h3>500tk</h3>
+            </div>
+            <div class="tk">
+                <h3>1000tk</h3>
+            </div>
+            <div class="tk">
+                <h3>200tk</h3>
+            </div>
+            <div class="tk">
+                <h3>500tk</h3>
+            </div>
+
+        </div>
+        <br>
+        <p id="other"> other amount taka</p>
+        <hr>
+
+        <br>
+
+        <a class="link2" target="_blank" href="https://www.bkash.com/">Donate Now</a>
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="donateplan">
+        <h2> Our Donate Plan</h2>
+        <p>
+            We have planed to help the homeless people during fire crisis with food,cloths,medicine,blood and other
+            neccesay products. We will try rehabilitation and education for the childrens.
+        </p>
+
+    </div>
 </body>
 
 </html>
