--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
             We have planed to help the homeless people during fire crisis with food,cloths,medicine,blood and other
             neccesay products. We will try rehabilitation and education for the childrens.
         </p>
-
     </div>
+    <section id="footer">
+        <h2 id="footcolor">Be Humble, Show Mercy</h2>
+        <p id="each">We are for each other</p>
+    </section>
 </body>
 
 </html>
