--- a/index.html
+++ b/index.html
@@ -76,9 +76,92 @@
             neccesay products. We will try rehabilitation and education for the childrens.
         </p>
     </div>
+    <section class="FES">
+        <div id="food">
+            <br>
+            <img id="foodicon" src="icons/food.png" alt=""> <br>
+            <div class="foodtext">
+                <h3>Food for a family</h3> <br>
+                <p>We will serve dry foods for 7 days to the victim family with the donation. Our desire is to make sure
+                    no
+                    body
+                    sleep hungry</p>
+            </div>
+        </div>
+
+        <div id="shalter">
+            <br>
+            <img id="shaltericon" src="icons/shelter.png" alt=""> <br>
+            <div class="shaltertext">
+                <h3>Shelter for a family</h3> <br>
+                <p>We will start the rehabilitation within some days. We'll try to make houses for every falimy with the
+                    donation</p>
+            </div>
+        </div>
+
+
+        <div id="education">
+            <br>
+            <img id="educationicon" src="icons/icon4.svg" alt=""> <br>
+            <div class="educationtext">
+                <h3>Education for a child</h3> <br>
+                <p>Every children have equal right of education as education is the backbone of a nation. So one part of
+                    donate will go for the child education</p>
+            </div>
+        </div>
+    </section>
+    <section class="vlog">
+        <div class="kindness">
+            <h1>Its Time To Show Your Kindness</h1>
+            <p>The fire broke out at BM Container Limited in Shitalpur area around 10pm last night (July 4), said a duty
+                officer
+                of Chittagong Fire Service and Civil Defence control room at Chittagong.
+                About falimy lost their lives, around 500 peopale are badly injured and 278 people died in this
+                inceident. They used live below proverty level and now they are totally empty handed.</p>
+            <br><br>
+            <a class="link3" target="_blank" href="https://www.bkash.com/">How to Contribute?</a>
+        </div>
+        <div>
+            <img class="vlog1" src="mypic/fire5.png" alt="">
+        </div>
+    </section>
+    <br> <br> <br>
+
+    <section class="vlog">
+        <div>
+            <img class="vlog1" src="mypic/fire6.jpg" alt="">
+        </div>
+        <div class="kindness">
+            <h1>Your Small Help Can Save One's Family</h1>
+            <p> Crisis happens acceidently but the loss occur that cann't not be covered. Still we have to continue our
+                lifes with flow. So our small help can be a life saver for someone. Its time to show our love and marcy
+                to the mankind. Let's show our unity and save the lifes.
+
+            </p> <br> <br>
+            <a class="link3" target="_blank" href="https://www.bkash.com/">How to Contribute?</a>
+        </div>
+    </section>
+
+    <section class="donateplan">
+        <div>
+            <h1>Get Our Updates</h1>
+            <p>If you have any type of inquery or question subscribe our channel to know updates.</p>
+        </div>
+    </section>
+    <div class="colorinput">
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="input">
+            <input id="mail" type="email" placeholder="Email"> <input id="subscribe" type="button" value="Subscribe">
+        </div>
+    </div>
     <section id="footer">
+        <br> <br>
         <h2 id="footcolor">Be Humble, Show Mercy</h2>
         <p id="each">We are for each other</p>
+
     </section>
 </body>
 
