--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             </div>
 
         </div>
-        <br>
-        <p id="other"> other amount taka</p>
+        <br> <br> <br>
+        <input id="other" type="text" placeholder="other amount (Taka)">
         <hr>
 
         <br>
@@ -152,7 +152,7 @@
         <br>
         <br>
         <br>
-        <br>
+
         <div class="input">
             <input id="mail" type="email" placeholder="Email"> <input id="subscribe" type="button" value="Subscribe">
         </div>
