--- a/index.html
+++ b/index.html
@@ -157,12 +157,13 @@
             <input id="mail" type="email" placeholder="Email"> <input id="subscribe" type="button" value="Subscribe">
         </div>
     </div>
+</body>
+<footer>
     <section id="footer">
         <br> <br>
         <h2 id="footcolor">Be Humble, Show Mercy</h2>
         <p id="each">We are for each other</p>
-
     </section>
-</body>
+</footer>
 
 </html>
