--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
 
         </div>
         <br> <br> <br>
-        <input id="other" type="text" placeholder="other amount (Taka)">
-        <hr>
+        <input id="other" size="70" type="text" placeholder="other amount (Taka)">
 
         <br>
-
+        <br>
         <a class="link2" target="_blank" href="https://www.bkash.com/">Donate Now</a>
     </section>
     <br>
