--- a/index.html
+++ b/index.html
@@ -16,22 +16,26 @@
 </head>
 
 <body>
-    <div class="container">
-        <img src="mypic/ranaplaza1.jpg" alt="" style="width:100%;">
-        <div class="centered">
-            <h1>Let’s Help Those Who Are
-                More In Need</h1>
-            <p id="lekha1">Its time to show your kindness and marcy to the people who lost their everything</p>
-            <a class="link" target="_blank" href="https://www.bkash.com/">Donate Now</a>
+    <section id="img-cover">
+        <div class="text-position">
+            <h1>
+                Let’s Help Those Who Are <br>
+                More In Need
+            </h1>
+            <p id="lekha1">
+                Its time to show your kindness and marcy to the people <strong>who lost their everything </strong>
+
+            </p> <a class=" link" target="_blank" href="https://www.bkash.com/">Donate Now</a>
         </div>
 
-    </div>
+    </section>
 
     <br>
     <div class="donate">
         <h2> Donate Today</h2>
         <p>
-            To help in the aftermath of the 4 july Old-Dhaka slum , see our potfolio on helping Camp Fire and Woolsley
+            To help in the aftermath of the 4 july Old-Dhaka slum , see our portfolio on helping Camp Fire and
+            Woolsley
             fire
             victims.
         </p>
@@ -81,7 +85,8 @@
             <img id="foodicon" src="icons/food.png" alt=""> <br>
             <div class="foodtext">
                 <h3>Food for a family</h3> <br>
-                <p>We will serve dry foods for 7 days to the victim family with the donation. Our desire is to make sure
+                <p>We will serve dry foods for 7 days to the victim family with the donation. Our desire is to make
+                    sure
                     no
                     body
                     sleep hungry</p>
@@ -93,7 +98,8 @@
             <img id="shaltericon" src="icons/shelter.png" alt=""> <br>
             <div class="shaltertext">
                 <h3>Shelter for a family</h3> <br>
-                <p>We will start the rehabilitation within some days. We'll try to make houses for every falimy with the
+                <p>We will start the rehabilitation within some days. We'll try to make houses for every falimy with
+                    the
                     donation</p>
             </div>
         </div>
@@ -104,7 +110,8 @@
             <img id="educationicon" src="icons/icon4.svg" alt=""> <br>
             <div class="educationtext">
                 <h3>Education for a child</h3> <br>
-                <p>Every children have equal right of education as education is the backbone of a nation. So one part of
+                <p>Every children have equal right of education as education is the backbone of a nation. So one
+                    part of
                     donate will go for the child education</p>
             </div>
         </div>
@@ -112,7 +119,8 @@
     <section class="vlog">
         <div class="kindness">
             <h1>Its Time To Show Your Kindness</h1>
-            <p>The fire broke out at BM Container Limited in Shitalpur area around 10pm last night (July 4), said a duty
+            <p>The fire broke out at BM Container Limited in Shitalpur area around 10pm last night (July 4), said a
+                duty
                 officer
                 of Chittagong Fire Service and Civil Defence control room at Chittagong.
                 About falimy lost their lives, around 500 peopale are badly injured and 278 people died in this
@@ -132,8 +140,10 @@
         </div>
         <div class="kindness">
             <h1>Your Small Help Can Save One's Family</h1>
-            <p> Crisis happens acceidently but the loss occur that cann't not be covered. Still we have to continue our
-                lifes with flow. So our small help can be a life saver for someone. Its time to show our love and marcy
+            <p> Crisis happens acceidently but the loss occur that cann't not be covered. Still we have to continue
+                our
+                lifes with flow. So our small help can be a life saver for someone. Its time to show our love and
+                marcy
                 to the mankind. Let's show our unity and save the lifes.
 
             </p> <br> <br>
